- couldn't sleep... ICommand, crawlers and parsers use java.net.URI for their location now - increased command-db chunk size to 1k during removal of known locations for speed reasons - mime-type detector accepts byte[] now - added cardinality-support to SettingsView template + labels for "Yes"/"No" - added missing overridden method toString() to SE's Multitoken resulting in a nicer query display in the log
git-svn-id: svn://svn.paxle.net/paxle/trunk@898 f5d3ab42-bacf-4b1a-9692-565be65a0cfe